--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -1,5 +1,5 @@
 <p>
-  <input type="checkbox" name="isDone" {{#if this.isDone }} checked {{/if}} disabled>
+  <input type="checkbox" name="isDone" {{#if todo.isDone }} checked {{/if}} disabled>
   {{ todo.name }}
 </p>
 <a href="/todos/{{ todo._id }}/edit">edit</a>
